[metadata]
name = zou
description = Zou is an API to store and manage the data of your CG production.
version = attr: zou.__version__
long_description = file: README.rst
keywords = cg, asset, shto, api, cg production, asset management
license = GNU Affero General Public License v3
license_file = LICENSE
author = CG Wire
author_email = frank@cg-wire.com
url = https://zou.cg-wire.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    flask==0.12.2
    click==6.7
    flask_restful==0.3.5
    flask_fixtures==0.3.7
    flask_sqlalchemy==2.3.2
    flask_bcrypt==0.7.1
    flask-jwt-extended==3.3.0
    flask-migrate
    flask-socketio==3.1.2
    python-engineio==3.2.3
    flask_principal
    flask_caching
    flask_mail
    flask_fs
    redis==3.2.1
    ldap3==2.5

    email_validator==1.0.2

    sqlalchemy==1.2.0
    sqlalchemy_utils==0.32.21
    psycopg2-binary==2.8.3

    python-slugify==1.2.4

    pillow==4.0.0
    pytz==2014.10
    babel==2.4.0
    isoweek==1.3.3

    python-swiftclient
    python-keystoneclient
    ffmpeg-python==0.1.18
    requests==2.20.1

    rq==1.0 
    six==1.12.0

    gunicorn==19.9.0
    gevent==1.4.0
    gevent-websocket==0.10.1

[options.package_data]
* = app/file_trees/*.json,migrations/*,migrations/versions/*.py

[options.packages.find]
# ignore tests and event_handlers directories
include = zou*

[options.extras_require]
prod =
    gunicorn
    gevent

dev =
    wheel

test =
    mixer==5.6.6
    pytest==3.0.7
    pytest-cov==2.5.1
    fakeredis

[options.entry_points]
console_scripts =
    zou = zou.cli:cli
