[metadata]
name = zou
description = Zou is an API to store and manage the data of your CG production.
version = attr: zou.__version__
long_description = file: README.rst
keywords = cg, asset, shto, api, cg production, asset management
license = GNU Affero General Public License v3
license_file = LICENSE
author = CG Wire
author_email = frank@cg-wire.com
url = https://zou.cg-wire.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    flask==1.1.1
    click==6.7
    flask_restful==0.3.7
    flask_fixtures==0.3.7
    flask_sqlalchemy==2.4.0
    flask_bcrypt==0.7.1
    flask-jwt-extended==3.20.0
    flask-migrate==2.5.2
    flask-socketio==4.1.0
    python-engineio==3.8.2.post1
    flask_principal==0.4.0
    flask_caching==1.7.2
    flask_mail==0.9.1
    flask_fs==0.6.1
    redis==3.2.1
    ldap3==2.5

    email_validator==1.0.4

    sqlalchemy==1.3.5
    sqlalchemy_utils==0.34.1
    psycopg2-binary==2.8.3

    python-slugify==3.0.2

    pillow==6.1.0
    pytz==2019.1
    babel==2.7.0
    isoweek==1.3.3

    python-swiftclient==3.8.0
    python-keystoneclient==3.20.0
    requests==2.20.1
    ffmpeg-python==0.2.0

    rq==1.0 
    six==1.12.0

    gunicorn==19.9.0
    gevent==1.4.0
    gevent-websocket==0.10.1

[options.package_data]
* = app/file_trees/*.json,migrations/*,migrations/versions/*.py

[options.packages.find]
# ignore tests and event_handlers directories
include = zou*

[options.extras_require]
prod =
    gunicorn
    gevent

dev =
    wheel

test =
    mixer==5.6.6
    pytest==5.0.1
    pytest-cov==2.7.1
    fakeredis

[options.entry_points]
console_scripts =
    zou = zou.cli:cli
